# schedules

./: .gitignore  compare.sh  verify.sh
cpp/: CMakeLists.txt  build
cpp/src/: main.cpp
cpp/src/implementations/: avx2.h  int64.h  plain.h  sse.h  threads.h
cpphip/: CMakeLists.txt
cpphip/src/: main.cpp
python/: requirements.txt  reset_tables.py  reset_tables.sql  run.py  test
python/schedules/: __init__.py  create_data.py  scan.py
python/tests/: tests.py
